stop checkbox label jumping

--- a/src/checkbox/css/mixins/_honeycomb.checkbox.mixins.checkbox.scss
+++ b/src/checkbox/css/mixins/_honeycomb.checkbox.mixins.checkbox.scss
@@ -29,7 +29,7 @@
 		span {
 			// stop label text from jumping when borders vanish
 			padding-left: $height + 10 + $height * 0.1;
-			padding-top: $height / 6 + $height * 0.1;
+			padding-top: $height * 0.1 + 2;
 		}
 	}
 }
